# mikey-gh-actions-example

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: daily-request.yml  three-secrets.yml
scripts/: constants.py  daily_request.py  lib.py  three_secrets.py
tests/: test_daily_request.py
